fix: article overflow-x

--- a/styles/Article.scss
+++ b/styles/Article.scss
@@ -3,8 +3,7 @@
 .article {
     width: 85%;
     max-width: 900px;
-    overflow-x: hidden;
-    overflow-y: auto;
+    overflow: auto;
 
     margin: 0 auto;
 
